# litlum

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README-docker.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_crossref.py
litlum/: __init__.py  __main__.py  config.py
litlum/config/: __init__.py  config.py  default-config.yaml
litlum/db/: database.py
litlum/feeds/: parser.py
litlum/reports/: generator.py
litlum/ui/: __init__.py  cli.py
litlum/web/: server.py  static_site_generator.py
litlum/web/assets/: scripts.js  styles.css
publication_reader/: __init__.py  __main__.py  config.py
publication_reader/db/: database.py
publication_reader/feeds/: __init__.py  crossref_parser.py  parser.py
publication_reader/llm/: analyzer.py
publication_reader/reports/: generator.py
publication_reader/ui/: __init__.py  cli.py
publication_reader/web/: server.py  static_site_generator.py
publication_reader/web/assets/: scripts.js  styles.css
tests/: test_analyzer.py  test_config.py  test_parser.py
