[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litlum"
version = "0.1.0"
description = "Scientific publication monitoring and analysis application"
authors = [
    {name = "Nikolay Koldunov", email = "koldunovn@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "feedparser>=6.0.0",
    "requests>=2.25.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "ollama>=0.1.0",
    "typing-extensions>=4.0.0; python_version < '3.10'",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["litlum*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
